force-app/main/default/objects/Associated_Product__c/Associated_Product__c.object-meta.xml
<CustomObject>
    <description>Associated Product can link to Case and/or Work Order</description>
    <label>Associated Product</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Associated Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>