force-app/main/default/objects/Associated_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the Account based on the Installed Product added to the Associated product</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>