force-app/main/default/objects/Associated_Product__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the Case the Associated Product is related to</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>