force-app/main/default/objects/Associated_Product__c/fields/Case_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Name__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Case lookup field details on Installed Product related list single.</description>
    <formula>IF($Setup.Channel_Partner_Profile_Settings__c.Is_Channel_Partner__c,
Case__r.Contact_Name__c,
HYPERLINK(&quot;/&quot; &amp; Case__r.ContactId ,Case__r.Contact_Name__c))</formula>
    <label>Case Contact Name</label>
    <type>Text</type>
</CustomField>