force-app/main/default/objects/Associated_Product__c/fields/Case_Date_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Case_Date_Time_Completed__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Case lookup field details on Installed Product related list single.</description>
    <formula>Case__r.Date_Time_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Date/Time Completed</label>
    <type>DateTime</type>
</CustomField>