force-app/main/default/objects/Associated_Product__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Case lookup field details on Installed Product related list single.</description>
    <formula>TEXT(Case__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>