force-app/main/default/objects/Associated_Product__c/fields/Domain_URL_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL_Pattern__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Shows the Domain URL Pattern from the Subscription,when added to  Associated Product</description>
    <formula>Subscription__r.Domain_URL_Pattern__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain URL Pattern</label>
    <type>Text</type>
</CustomField>