force-app/main/default/objects/Associated_Product__c/fields/Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <inlineHelpText>Expiry Date for a Consumable Product</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>