force-app/main/default/objects/Associated_Product__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Installed product</description>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>