force-app/main/default/objects/Associated_Product__c/fields/Installed_Product_Upgrade_Type__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product_Upgrade_Type__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Shows the Installed Product Upgrade type, when Installed Product is populated.</description>
    <label>Installed Product Upgrade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>IVD</fullName>
            </value>
            <value>
                <fullName>RUO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>