force-app/main/default/objects/Associated_Product__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>If set to true, implies that the consumable was expired at the time of use.</description>
    <inlineHelpText>Check this box if the consumable was expired at the time of use.</inlineHelpText>
    <label>Is Expired?</label>
    <type>Checkbox</type>
</CustomField>