force-app/main/default/objects/Associated_Product__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>If set to true, shows the product on the Associated Product is the main product for a Case.</description>
    <inlineHelpText>Check this box if this product is the main product for a Case. For Business Issue Cases, this designated the Suspected Root Cause Product.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>