force-app/main/default/objects/Associated_Product__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current physical location of the product. This is a lookup to an existing location record</description>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>