force-app/main/default/objects/Associated_Product__c/fields/Material_Class__c.field-meta.xml
<CustomField>
    <fullName>Material_Class__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Shows the Material Class from Product, when added to Associated Product</description>
    <formula>TEXT( Product__r.Material_Class__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Class</label>
    <type>Text</type>
</CustomField>