force-app/main/default/objects/Associated_Product__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Work Order lookup field details on Installed Product related list single.</description>
    <formula>TEXT (Work_Order__r.SVMXC__Order_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>