force-app/main/default/objects/Associated_Product__c/fields/Proactive_Run_Detail__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Run_Detail__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Proactive Run Detail record</description>
    <label>Proactive Run Detail</label>
    <referenceTo>Proactive_Run_Detail__c</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>