force-app/main/default/objects/Associated_Product__c/fields/Product_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Lot_Number__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Text field to store Lot Number of the Product.</description>
    <label>Product Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>