force-app/main/default/objects/Associated_Product__c/fields/Product_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Serial_Number__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Field for holding related Product&apos;s Serial Number, user editable</description>
    <label>Product Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>