force-app/main/default/objects/Associated_Product__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Displays the Product Serial Number text field if populated or the Installed Product Serial Number if Product Serial Number field is blank.</description>
    <formula>Installed_Product__r.SVMXC__Serial_Lot_Number__c &amp; Product_Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Product Serial Number text field if populated or the Installed Product Serial Number if Product Serial Number field is blank.</inlineHelpText>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>