force-app/main/default/objects/Associated_Product__c/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Capture software version of Installed Product, generated manually</description>
    <label>Software Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>