force-app/main/default/objects/Associated_Product__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links/relates the associated product record with Service/Maintenance Contract object having ERP Contract Type = Software (ZWS), ZCQ or Software Contract</description>
    <label>Subscription</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Associated Products</relationshipLabel>
    <relationshipName>Associated_Products</relationshipName>
    <type>Lookup</type>
</CustomField>