force-app/main/default/objects/Associated_Product__c/fields/Work_Order_Account__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Account__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Work Order lookup field details on Installed Product related list single.</description>
    <formula>IF($Setup.Channel_Partner_Profile_Settings__c.Is_Channel_Partner__c,
Work_Order__r.SVMXC__Company__r.Name,
HYPERLINK(
  &quot;/&quot; &amp; Work_Order__r.SVMXC__Company__c,
  Work_Order__r.SVMXC__Company__r.Name,
  &quot;_self&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Account</label>
    <type>Text</type>
</CustomField>