force-app/main/default/objects/Associated_Product__c/fields/Work_Order_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Case_Number__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Work Order lookup field details on Installed Product related list single.</description>
    <formula>IF($Setup.Channel_Partner_Profile_Settings__c.Is_Channel_Partner__c,
Work_Order__r.Case_Number__c,

HYPERLINK(
  &quot;/&quot; &amp;  Work_Order__r.SVMXC__Case__c ,
  Work_Order__r.Case_Number__c,
  &quot;_self&quot;
)

)</formula>
    <label>Work Order Case Number</label>
    <type>Text</type>
</CustomField>