force-app/main/default/objects/Associated_Product__c/fields/Work_Order_Subject__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Subject__c</fullName>
    <businessOwnerGroup>Service_Schema_Owners</businessOwnerGroup>
    <description>Used to show Work Order lookup field details on Installed Product related list single.</description>
    <formula>Work_Order__r.SVMX_PS_Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Subject</label>
    <type>Text</type>
</CustomField>