force-app/main/default/objects/Associated_Product__c/validationRules/CheckProductSerialNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckProductSerialNumber</fullName>
    <active>true</active>
    <description>This validation rule ensures data integrity by preventing the population of the &quot;Product Serial Number&quot; field if an associated &quot;Installed Product&quot; already has a serial number.</description>
    <errorConditionFormula>AND(
    NOT($Profile.Name == $Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName == $Label.Automated_Process_User),
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    AND(
        NOT(ISBLANK(Installed_Product__r.SVMXC__Serial_Lot_Number__c)),
        NOT(ISBLANK(Product_Serial_Number__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Product_Serial_Number__c</errorDisplayField>
    <errorMessage>The Installed Product Serial Number is already filled in. Remove the Product Serial Number information or Remove the Installed Product from the Associated Product.</errorMessage>
</ValidationRule>