force-app/main/default/objects/Associated_Product__c/validationRules/EnforceMatchingProductOnEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceMatchingProductOnEdit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
AND(
NOT(ISBLANK(Installed_Product__c)),
ISCHANGED(Product__c)
)
)</errorConditionFormula>
    <errorMessage>Installed Product and Product must match on an Associated Product. Add a new
Product if needed.</errorMessage>
</ValidationRule>