force-app/main/default/objects/Associated_Product__c/validationRules/ProductSourceIsSAPOnAssociatedProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductSourceIsSAPOnAssociatedProduct</fullName>
    <active>true</active>
    <description>Products that do not have Source System as SAP cannot be added to Additional Product -</description>
    <errorConditionFormula>AND(
        NOT($Profile.Name =$Label.Integration_SAP_Service),
        NOT($Profile.Name = $Label.Integration_Service_SNAP_Profile),
        NOT($User.FirstName =$Label.Automated_Process_User),
        NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
        NOT(ISPICKVAL(Product__r.Source_System__c,&quot;SAP&quot;)),
        NOT(ISBLANK(Product__c)),
        OR(ISNEW(),
        ISCHANGED(Product__c))
        )</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>The Product you selected is an online promotion and can’t be added to Cases or Work Orders. Select the related Product and Save again.</errorMessage>
</ValidationRule>